--- a/UserManual/使用说明.md
+++ b/UserManual/使用说明.md
@@ -1,4 +1,4 @@
-# <center><font color=red>RatNeuroPixels 使用说明 </font></center>
+# <center><font color=red>MultiChannelProcess 使用说明 </font></center>
 
 ## 1.从Github上下载代码
 
@@ -42,7 +42,7 @@
 | **BLOCKPATH**   | TDT的blockpath                                               |
 | **Paradigm**    | 范式名称                                                     |
 | **datPath***    | neuropixel数据的存储路径                                     |
-| **SR_AP***      | 默认值：30000                                                |
+| **SR_AP**       | spike sorting用到的原始数据采样率，TDT一般为12207.0312，Neuropixel一般为30000 |
 | **SR_LFP***     | 默认值：2500                                                 |
 | **sitePos**     | 电极位置，若可以明确距离前囟的坐标位点，则写位点（A/P,V/D)，A:anterior;P:posterior;V:ventral;D:dorsal；否则填“position+No.”，如“AC1” |
 | **depth**       | 电极进入的深度                                               |
